--- a/index.html
+++ b/index.html
@@ -2,24 +2,29 @@
 <html lang="pt-br">
     <head>
         <!-- jQuery, jQueryUI, D3 e C3 -->
-        <script src="./node_modules/jquery/dist/jquery.min.js"></script>
-        <script src="./node_modules/d3/d3.min.js"></script>
-        <script src="./node_modules/c3/c3.min.js"></script>
-        <link href="./node_modules/c3/c3.min.css" rel="stylesheet"></script>
-        <script src="./node_modules/jqueryui/jquery-ui.min.js"></script>
-        <link href="./node_modules/jqueryui/jquery-ui.min.css" rel="stylesheet"></link>
+        <script src="https://unpkg.com/jquery@3.2.1/dist/jquery.min.js"></script>
+        <script src="https://unpkg.com/d3@3.5.0/d3.min.js"></script>
+        <script src="https://unpkg.com/c3@0.4.11/c3.min.js"></script>
+        <link href="https://unpkg.com/c3@0.4.11/c3.min.css" rel="stylesheet"></script>
+        <script src="https://unpkg.com/jqueryui@1.11.1/jquery-ui.min.js"></script>
+        <link href="https://unpkg.com/jqueryui@1.11.1/jquery-ui.min.css" rel="stylesheet"></link>
         <!-- Tudo do Pivottable -->
-        <script src="./node_modules/pivottable/dist/pivot.min.js"></script>
-        <script src="./node_modules/pivottable/dist/pivot.pt.min.js"></script>
-        <script src="./node_modules/pivottable/dist/c3_renderers.min.js"></script>
-        <script src="./node_modules/pivottable/dist/d3_renderers.min.js"></script>
-        <script src="./node_modules/pivottable/dist/export_renderers.min.js"></script>
-        <link href="./node_modules/pivottable/dist/pivot.min.css" rel="stylesheet"></link>
+        <script src="https://unpkg.com/pivottable@2.13.0/dist/pivot.min.js"></script>
+        <script src="https://unpkg.com/pivottable@2.13.0/dist/pivot.pt.min.js"></script>
+        <script src="https://unpkg.com/pivottable@2.13.0/dist/c3_renderers.min.js"></script>
+        <script src="https://unpkg.com/pivottable@2.13.0/dist/d3_renderers.min.js"></script>
+        <script src="https://unpkg.com/pivottable@2.13.0/dist/export_renderers.min.js"></script>
+        <link href="https://unpkg.com/pivottable@2.13.0/dist/pivot.css" rel="stylesheet"></link>
 
         <!-- Bootstrap -->
-        <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-        <link href="./node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"></link>
-        <link href="./node_modules/bootstrap/dist/css/bootstrap-theme.min.css" rel="stylesheet"></link>
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+<!-- Optional theme -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
         
 
     </head>
